more things on the specific crypto page

--- a/src/Web/Insightify.SPA/Insightify.SPA/Pages/Crypto.razor
+++ b/src/Web/Insightify.SPA/Insightify.SPA/Pages/Crypto.razor
@@ -3,6 +3,7 @@
     <div class="info">
         <img class="image" src="/images/bitcoin.png"/>
         <div class="basic-info">
+            <p class="title">Name</p>
             <h1 class="name">BitCoin</h1>
             <h2 class="price">26000 USD</h2>
         </div>
@@ -23,7 +24,21 @@
         </div>
     </div>
 </section>
+<section class="links">
+    <a class="link-item">GitHub <i class="fa-solid fa-link"></i></a>
+    <a class="link-item">Website <i class="fa-solid fa-link"></i></a>
+    <a class="link-item">Community <i class="fa-solid fa-link"></i></a>
+    <a class="link-item">Whitepaper <i class="fa-solid fa-link"></i></a>
+
+</section>
 <section class="chart">
+    <div class="chart-nav">
+        <a class="chart-nav-item">Price</a>
+        <a class="chart-nav-item">Market Cap</a>
+    </div>
+    <div class="chart-container">
+
+    </div>
 </section>
 <section class="news">
 </section>
