--- a/src/Web/Insightify.SPA/Insightify.SPA/Pages/Crypto.razor.css
+++ b/src/Web/Insightify.SPA/Insightify.SPA/Pages/Crypto.razor.css
@@ -18,13 +18,19 @@
 		padding: 0 24px;
 	}
 	.top .info .basic-info {
-
+		
 	}
 	.top .info .basic-info .name {
 			
 	}
 	.top .info .basic-info .price {
 		font-size: 24px;
+		font-weight: 400;
+	}
+	.top .info .basic-info .title {
+		color: gray;
+		font-size: 16px;
+		font-weight: 600;
 	}
 		
 	.top .info .image {
@@ -46,34 +52,109 @@
 		display: flex;
 		flex-direction: column;
 		align-items: start;
-		justify-content: center;
+		justify-content: start;
+		gap: 15%;
+		height: 100%;
 	}
 		.top .data .market-cap .name {
 			color: gray;
 			font-size: 16px;
 			font-weight: 600;
 		}
-.top .data .day-vol {
-	display: flex;
-	flex-direction: column;
-	align-items: start;
-	justify-content: center;
+.top .data .market-cap .value {
+	font-size: 20px;
+	font-weight: 500;
+	margin: 0;
 }
+		.top .data .day-vol {
+			display: flex;
+			flex-direction: column;
+			align-items: start;
+			justify-content: start;
+			height: 100%;
+			gap: 15%;
+		}
 
 	.top .data .day-vol .name {
 		color: gray;
 		font-size: 16px;
 		font-weight: 600;
 	}
-.top .data .day-change {
-	display: flex;
-	flex-direction: column;
-	align-items: start;
-	justify-content: center;
-}
+	.top .data .day-vol .value {
+		font-size: 20px;
+		font-weight: 500;
+	}
+		.top .data .day-change {
+			display: flex;
+			flex-direction: column;
+			align-items: start;
+			justify-content: start;
+			height: 100%;
+			gap: 15%;
+		}
 
 .top .data .day-change .name {
 	color: gray;
 	font-size: 16px;
 	font-weight: 600;
+}
+.top .data .day-change .value {
+	font-size: 20px;
+	font-weight: 500;
+}
+
+.links {
+	margin-top: 24px;
+	background-color: white;
+	height: 64px;
+	width: fit-content;
+	border-radius: 12px;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	padding: 18px;
+}
+.links .link-item {
+	text-decoration: none;
+	color: black;
+	border-radius: 16px;
+	padding: 6px 12px;
+	font-size: 18px;
+
+}
+	.links .link-item:hover {
+		background-color: #ecdff5;
+		color: #ad5adc;
+	}
+
+.chart {
+	width: 100%;
+	margin-top: 24px;
+	display: flex;
+	flex-direction: column;
+	gap: 24px;
+}
+.chart .chart-nav {
+	border-bottom: 3px solid white;
+	display: flex;
+	gap: 32px;
+	padding: 24px 24px 0 24px;
+}
+.chart .chart-nav .chart-nav-item {
+	text-decoration: none;
+	color: black;
+	font-size: 20px;
+	font-weight: 400;
+	height: 100%;
+}
+	.chart .chart-nav .chart-nav-item:hover {
+		color: #ad5adc;
+		box-shadow: 0 3px 0 0 #ad5adc; /* Mimics a 2px border on all sides */
+	}
+
+.chart .chart-container {
+	width: 100%;
+	height: 500px;
+	background-color: white;
+	border-radius: 12px;
 }
