--- a/src/Web/Insightify.SPA/Insightify.SPA/Shared/LoginDisplay.razor.css
+++ b/src/Web/Insightify.SPA/Insightify.SPA/Shared/LoginDisplay.razor.css
@@ -71,3 +71,34 @@
 				background-color: #ecdff5;
 				color: #ad5adc;
 			}
+
+.not-authorized-register {
+	width: 50%;
+	height: 100%;
+	border-top-left-radius: 30px 30px;
+	border-bottom-left-radius: 30px 30px;
+	border-top-right-radius: 5px;
+	border-bottom-right-radius: 5px;
+	background-color: white;
+	box-shadow: -50px 0px 131px -65px rgba(0,0,0,0.85);
+}
+.not-authorized-login {
+	background-color: white;
+	width: 50%;
+	height: 100%;
+	border-top-left-radius: 5px;
+	border-bottom-left-radius: 5px;
+	border-top-right-radius: 30px 30px;
+	border-bottom-right-radius: 30px 30px;
+	box-shadow: 50px 0px 131px -65px rgba(0,0,0,0.85);
+}
+.not-authorized-button {
+	width: 100%;
+	height: 100%;
+	padding: 15px;
+	display: inline-block;
+	color: #2A2E32;
+	text-decoration: none;
+	text-align: center;
+	font-size: larger;
+}
