--- a/src/Web/Insightify.SPA/Insightify.SPA/Shared/MainLayout.razor.css
+++ b/src/Web/Insightify.SPA/Insightify.SPA/Shared/MainLayout.razor.css
@@ -12,7 +12,7 @@
         display: flex;
         justify-content: space-evenly;
         flex-direction: row;
-        gap: 12px;
+        gap: 3px;
 	    align-items: center;
 	    overflow-y: visible;
 	    height: 100%;
@@ -36,6 +36,12 @@
 		    display: flex;
 		    flex-direction: column;
 		}
+
+.top-row-left {
+    margin: 0;
+    width: 300px;
+    border-radius: 25px;
+}
 
 article {
     padding: 32px 72px;
