--- a/src/Web/Insightify.SPA/Insightify.SPA/Shared/NavMenu.razor
+++ b/src/Web/Insightify.SPA/Insightify.SPA/Shared/NavMenu.razor
@@ -8,7 +8,7 @@
     </div>
 </div>
 
-<div class="@NavMenuCssClass space-between" @onclick="ToggleNavMenu">
+<div class="@NavMenuCssClass space-between nav-scrollable" @onclick="ToggleNavMenu">
     <section>
         <h5 class="nav-title">Main</h5>
         <div class="nav-item px-1 hover">
