--- a/src/Web/Insightify.MVC/Insightify.MVC/wwwroot/css/site.css
+++ b/src/Web/Insightify.MVC/Insightify.MVC/wwwroot/css/site.css
@@ -19,59 +19,20 @@ html {
 
 body {
     display: flex;
-    background-color: #444654;
+    background-color: #ececec;
     color: #D1D5DB;
-}
-
-
-.navbar {
-    width: 200px;
-    position: relative;
-    height: 100vh;
-    flex-shrink: 0;
-}
-
-nav {
-    background-color: #202123;
-    width: 200px;
-    position: fixed;
-    height: 100vh;
-}
-
-ul {
-    font-size: 24px;
-    list-style: none;
-}
-
-.navbar-nav {
-    display: flex;
-    flex-direction: row;
-}
-
-
-.page {
-    display: flex;
-    flex-direction: column;
-    width: calc(100% - 200px);
-    flex-shrink: 0;
 }
 
 .header {
     display: flex;
     flex-direction: row;
-    background-color: #343541;
+    background-color: white;
     width: 100%;
     padding-left: 50px;
-    position:fixed;
-    z-index:1;
-}
-
-.navbar-nav {
-    display: flex;
-    flex-direction: row;
-}
-
-.container-main{
-    padding: 30px 50px;
-    padding-top: 80px;
+    position: fixed;
+    z-index: 1;
+    border-bottom-width: 1px;
+    border-color: rgba(0,0,0,.1);
+    border: 1px solid #d9d9e3;
+    height: 70px;
 }
