Hooked idenity to identity microservice.

--- a/src/Web/Insightify.MVC/Insightify.MVC/Views/Shared/_HomeLayout.cshtml
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Views/Shared/_HomeLayout.cshtml
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Onest:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="~/Insightify.MVC.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/index.css" asp-append-version="true" />
 </head>
 <body>
     @RenderBody()
