--- a/src/Web/Insightify.MVC/Insightify.MVC/Views/Shared/_Layout.cshtml
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Views/Shared/_Layout.cshtml
@@ -6,8 +6,9 @@
     <title>@ViewData["Title"] - Insightify.MVC</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/Insightify.MVC.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/index.css" asp-append-version="true" />
     <link href="~/css/dashboard.css" rel="stylesheet" />
+    <link rel="stylesheet" href="~/Insightify.MVC.styles.css" asp-append-version="true" />
     <link href="c:\david\git-repos\insightify\src\web\insightify.mvc\insightify.mvc\views\shared\_layout.cshtml.css" rel="stylesheet" />
 </head>
 <body>
