Added crypto page

--- a/src/Web/Insightify.MVC/Insightify.MVC/Views/Shared/_Layout.cshtml
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <link href="~/css/dashboard.css" rel="stylesheet" />
     <link href="~/css/layout.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/Insightify.MVC.styles.css" asp-append-version="true" />
+    <link href="~/css/crypto.css" rel="stylesheet" />
 </head>
 <body>
     <div class="navbar">
