--- a/src/Web/Insightify.MVC/Insightify.MVC/Views/Home/Index.cshtml
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Views/Home/Index.cshtml
@@ -38,7 +38,7 @@
     <div class="centertext">
         <h6>@Model.CenterText</h6>
         <div class="buttons">
-             <form asp-action="Dashboard" asp-controller="Home" style="display:flex;">
+             <form asp-action="SignIn" asp-controller="Account" style="display:flex;">
                 <button class="btn-style" type="submit">@Model.LogIn</button>
              </form>
              <form asp-action="Dashboard" asp-controller="Home" style="display:flex;">
