--- a/src/Web/Insightify.MVC/Insightify.MVC/Views/Home/Crypto.cshtml
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Views/Home/Crypto.cshtml
@@ -1,6 +1,6 @@
 ﻿<section class="top">
     <div class="info">
-        <img class="image" src="/images/bitcoin.png" />
+        <img class="image" src="/images/navbar/bitcoin.png" />
         <div class="basic-info">
             <p class="title">Name</p>
             <h1 class="name">BitCoin</h1>
@@ -15,6 +15,11 @@
         <div class="day-vol">
             <p class="name">24h Volume</p>
             <p class="value">7866014689.824344</p>
+        </div>
+        <div class="day-change">
+            <p class="name">24h Change</p>
+
+            <p class="value">-0.14</p>
         </div>
         <div class="day-change">
             <p class="name">24h Change</p>
@@ -39,6 +44,59 @@
     </div>
 </section>
 <section class="news">
+    <div class="news-header">
+         <h3 class="title">Related news articles</h3>
+     </div>
+    <div class="news-container">
+        <div class="card">
+            <img class="img" src="https://placehold.co/600x400"/>
+            <div class="content">
+                <div class="info">
+                    <p class="author">Author</p>
+                    <p class="timestamp">12/10/2023</p>
+                </div>
+                <h4 class="heading">A very exciting title</h4>
+                <p class="description">A good long and informative description.</p>
+            </div>
+
+        </div>
+        <div class="card">
+            <img class="img" src="https://placehold.co/600x400" />
+            <div class="content">
+                <div class="info">
+                    <p class="author">Author</p>
+                    <p class="timestamp">12/10/2023</p>
+                </div>
+                <h4 class="heading">A very exciting title</h4>
+                <p class="description">A good long and informative description.</p>
+            </div>
+
+        </div>
+        <div class="card">
+            <img class="img" src="https://placehold.co/600x400" />
+            <div class="content">
+                <div class="info">
+                    <p class="author">Author</p>
+                    <p class="timestamp">12/10/2023</p>
+                </div>
+                <h4 class="heading">A very exciting title</h4>
+                <p class="description">A good long and informative description.</p>
+            </div>
+
+        </div>
+        <div class="card">
+            <img class="img" src="https://placehold.co/600x400" />
+            <div class="content">
+                <div class="info">
+                    <p class="author">Author</p>
+                    <p class="timestamp">12/10/2023</p>
+                </div>
+                <h4 class="heading">A very exciting title</h4>
+                <p class="description">A good long and informative description.</p>
+            </div>
+
+        </div>
+    </div>
 </section>
 <section class="posts">
 </section>
